--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Demo</h1>
   <div id="app"></div>
-  <script type="module" src="/index.js"></script>
+  <script type="module" src="/dist/index.js"></script>
 </body>
 
 </html>
